--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Wen Xiong & Damel Version of Netflix</title>
+        <title>Wen Xiong & Jamel Version of Netflix</title>
         <link rel="stylesheet" href="style.css">
         <script src="function.js"></script>
     </head>
