Update the project

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <header>
       <div class="header">
+        <!--<img src="img/backdrop.png" width="100%" style="position: absolute; opacity: 50%; left:0"/>-->
         <img class="logo" src="netflix.png" width="200px" />
 
         <div class="header_input">
@@ -25,20 +26,115 @@
           </select>
           <button name="sign-in">Sign In</button>
         </div>
+        
       </div>
     </header>
 
     <main class="main">
-      <img src="popcorn.png" width="100px" />
+      <div>
+        <img src="img/icon_img/popcorn_icon.png" width="100px" />
 
-      <div class="mini_tag">
-        <div class="mini_tag_sentence">
-          <h2>The Netflix you love for just $7.99.</h2>
-          <p style="font-size: larger">
-            Get our most affordable, ad-suported plan.
-          </p>
+        <div class="mini_tag_container">
+          <div>
+            <h2>The Netflix you love for just $7.99.</h2>
+            <p style="font-size: larger">
+              Get our most affordable, ad-suported plan.
+            </p>
+          </div>
+          <button id="learnMore">Learn More</button>
         </div>
-        <button id="learnMore">Learn More</button>
+      </div>
+
+      <div>
+        <h1>Trending Now</h2>
+
+        <div id="horizontal_scroll_movie">
+          <img src="img/movie_img/movie1.png" />
+          <img src="img/movie_img/movie2.png" />
+          <img src="img/movie_img/movie3.png" />
+          <img src="img/movie_img/movie4.png" />
+          <img src="img/movie_img/movie5.png" />
+          <img src="img/movie_img/movie6.png" />
+          <img src="img/movie_img/movie7.png" />
+          <img src="img/movie_img/movie8.png" />
+          <img src="img/movie_img/movie9.png" />
+          <img src="img/movie_img/movie10.png" />
+        </div>
+      </div>
+
+      <div>
+        <h1>More Reasons to Join</h2>
+
+        <div>
+          <div>
+            <div>
+              <h1 style="margin: 0">Enjoy on your TV</h1>
+              <p>
+                Watch on Smart TVs, Playstation, Xbos, Chromecas, Apple TV,
+                Blu-ray players, and more.
+              </p>
+            </div>
+            <img src="img/icon_img/tv_icon.png" />
+          </div>
+          <div>
+            <div>
+              <h1 style="margin: 0">Download your shows to watch offline</h1>
+              <p>
+                Save your favorites easily and always have something to watch.
+              </p>
+            </div>
+            <img src="img/icon_img/download_icon.png" />
+          </div>
+          <div>
+            <div>
+              <h1 style="margin: 0">Watch everywhere</h1>
+              <p>
+                Stream unlimited movies and TV shows on your phone, tablet,
+                laptop, and TV.
+              </p>
+            </div>
+            <img src="img/icon_img/scope_icon.png" />
+          </div>
+          <div>
+            <div>
+              <h1 style="margin: 0">Create profiles for kids</h1>
+              <p>
+                Watch on Smart TVs, Playstation, Xbos, Chromecas, Apple TV,
+                Blu-ray players, and more.
+              </p>
+            </div>
+            <img src="img/icon_img/chat_icon.png" />
+          </div>
+        </div>
+      </div>
+
+
+      <div>
+        <h1>Frequently Asked Questions</h1>
+        <div>
+          <div>What is Netflix?</div>
+          <div style="font-size: 3rem; margin: 0;">+</div>
+        </div>
+        <div>
+          <div>How much does Netflix cost?</div>
+          <div style="font-size: 3rem; margin: 0;">+</div>
+        </div>
+        <div>
+          <div>Where can I watch?</div>
+          <div style="font-size: 3rem; margin: 0;">+</div>
+        </div>
+        <div>
+          <div>How do I cancel?</div>
+          <div style="font-size: 3rem; margin: 0;">+</div>
+        </div>
+        <div>
+          <div>What can I watch on Netflix?</div>
+          <div style="font-size: 3rem; margin: 0;">+</div>
+        </div>
+        <div>
+          <div>Is Netflix good for kids?</div>
+          <div style="font-size: 3rem; margin: 0;">+</div>
+        </div>
       </div>
     </main>
 
