top first draft

--- a/index.html
+++ b/index.html
@@ -1,19 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Wen Xiong & Damel Version of Netflix</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="function.js"></script>
-    </head>
-    <body>
-        <header>
-
-        </header>
-        <main>
-
-        </main>
-        <section>
-
-        </section>
-    </body>
+  <head>
+    <title>Wen Xiong & Jamel's Version of Netflix</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="function.js"></script>
+  </head>
+  <body>
+    
+    <header>
+        <img src="media/US-en-20250609-TRIFECTA-perspective_bf732f5c-4fad-4035-9f96-79f38c9579a8_medium.jpg" width="100%" style="position: absolute; opacity: 50%;"/>
+      <div id="Logonetflix">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/7/7a/Logonetflix.png"
+          height="100px"
+          width="300px"
+        />
+      </div>
+      <select id="languageSelect">
+        <option>English</option>
+        <option>Espanol</option>
+      </select>
+      <div id="signIn"><h1>Sign In</h1></div>
+    </header>
+    
+    <main>
+      <div id="one">
+        <div id="lineOne" style="color: white">
+          <h1>Unlimited movies, tv</h1>
+        </div>
+        <div id="lineTwo" style="color: white"><h1>shows, and more</h1></div>
+        <div id="lineThree" style="color: white">
+          <h3>Starts at $7.99. Cancel anytime.</h3>
+        </div>
+        <div id="lineFour" style="color: white">
+          <h3>
+            Ready to watch? Enter your email to create or restart your
+            membership.
+          </h3>
+        </div>
+        <
+        <div id="lineFIve"><p>Email Address</p></div>
+      </div>
+    </main>
+    <section></section>
+  </body>
 </html>
