--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <title>Wen Xiong & Jamel Version of Netflix</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -121,11 +122,11 @@
       </div>
 
 
-      <div>
+      <div id ="faq">
         <h1>Frequently Asked Questions</h1>
         <div>
           <div>What is Netflix?</div>
-          <div style="font-size: 3rem; margin: 0;">+</div>
+          <div style="font-size: 3rem; margin: 0; font-family: myFirstFont;">+</div>
         </div>
         <div>
           <div>How much does Netflix cost?</div>
@@ -149,8 +150,23 @@
         </div>
       </div>
     </main>
+   
 
-    <section></section>
+    <section><div id="bottom" style="color: white;"><p>Ready to watch? Enter your email to create or restart your membership.</p></div>
+            <div class="third_input">
+        <input type="email" id="email" name="email" placeholder="    Email Address">
+        <button name="sign-in">Sign In</button>
+      </div> <div class="header_input">
+          <select name="language">
+            <option>English</option>
+            <option>Espanol</option>
+          </select>
+          
+          
+        </div>
+        <div style="color: grey;"><p>Questions? Call 1-844-505-2993</p></div>
+        <div style="color: grey;"><p>This page is protected by Google reCAPTCHA to ensure you're not a bot. Learn more.</p></div>
+      </section>
   </div>
-  </body>
-</html>
+=======
+ 
