--- a/index.html
+++ b/index.html
@@ -169,3 +169,5 @@
         <div style="color: grey;"><p>This page is protected by Google reCAPTCHA to ensure you're not a bot. Learn more.</p></div>
       </section>
   </div>
+  </body></html>
+ 
