--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-<<<<<<< HEAD
 
     <title>Wen Xiong & Jamel Version of Netflix</title>
 
@@ -113,7 +112,7 @@
             <div>
               <h1 style="margin: 0">Create profiles for kids</h1>
               <p>
-                Watch on Smart TVs, Playstation, Xbos, Chromecas, Apple TV,
+                Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV,
                 Blu-ray players, and more.
               </p>
             </div>
@@ -167,6 +166,33 @@
         </div>
         <div style="color: grey;"><p>Questions? Call 1-844-505-2993</p></div>
         <div style="color: grey;"><p>This page is protected by Google reCAPTCHA to ensure you're not a bot. Learn more.</p></div>
+        <div id="links" style="color: grey;">
+            <div><p>FAQ</p></div>
+            <div><p>Help Center</p></div>
+            <div><p>Account</p></div>
+            <div><p>Netflix House</p></div>
+            <div><p>Media Center</p></div>
+            <div><p>Investor Relations</p></div>
+            <div><p>Jobs</p></div>
+            <div><p>Netflix Shop</p></div>
+            <div><p>Redeem Gift Cards</p></div>
+            <div><p>Buy Gift Cards</p></div>
+            <div><p>Ways to Watch</p></div>
+            <div><p>Terms of Use</p></div>
+            <div><p>Privacy</p></div>
+            <div><p>Cookie Preferences</p></div>
+            <div><p>Corporate Information</p></div>
+            <div><p>Contact Us</p></div>
+            <div><p>Speed Test</p></div>
+            <div><p>Legal Notices</p></div>
+            <div><p>Only on Netflix</p></div>
+            <div><p>Do Not Sell or Share My Personal Information</p></div>
+            <div><p>Ad Choices</p></div>
+            <div><p>Legal Notices</p></div>
+
+            
+          </div>
+        </div>
       </section>
   </div>
   </body></html>
