--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!--<img src="img/backdrop.png" width="100%" style="position: absolute; opacity: 10%; left:0"/>-->
       <div class="header_part1">
         
-        <img class="logo" src="netflix.png" width="200px" />
+        <img class="logo" src="img/icon_img/netflix_icon.png" width="200px" />
 
         <div class="header_input">
           <select name="language">
