--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <section><div id="bottom" style="color: white;"><p>Ready to watch? Enter your email to create or restart your membership.</p></div>
             <div class="third_input">
-        <input type="email" id="email" name="email" placeholder="    Email Address">
+        <input type="email" id="email" name="email" placeholder="    Email Address" >
         <button name="sign-in">Sign In</button>
       </div> <div class="header_input">
           <select name="language">
@@ -192,7 +192,11 @@
 
             
           </div>
-        </div>
+        </div> 
+        <div id = "foot"><select name="language">
+            <option>English</option>
+            <option>Espanol</option>
+          </select></div> 
       </section>
   </div>
   </body></html>
